--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,22 @@ services:
     networks:
       - ls_network
     container_name: localstack
-    image: localstack/localstack-pro:latest
+    image: localstack/localstack-pro:3.2.0
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
-      - "127.0.0.1:53:53"
-      - "127.0.0.1:53:53/udp"
+      - "127.0.0.1:443:443"              # LocalStack HTTPS Gateway (Pro)
+
     environment:
-      - DEBUG=1  # enable more verbose logs
-      - DOCKER_HOST=unix:///var/run/docker.sock #unix socket to communicate with the docker daemon
-      - LOCALSTACK_HOST=localstack # where services are available from other containers
       - ENFORCE_IAM=1 # enforce IAM policies
-      - LAMBDA_DOCKER_NETWORK=ls_network
       - LOCALSTACK_AUTH_TOKEN=${LOCALSTACK_AUTH_TOKEN}
+      - LAMBDA_DOCKER_NETWORK=ls_network
       - LAMBDA_RUNTIME_ENVIRONMENT_TIMEOUT=60
+      - LAMBDA_REMOVE_CONTAINERS=1
+      - DNS_NAME_PATTERNS_TO_RESOLVE_UPSTREAM=.*localstack-pod-storage.s3.amazonaws.com
 
     volumes:
-      - "./volume:/var/lib/localstack"
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
 
 networks:
